# bevy_boids

./: .goutputstream-FD9EN1  .goutputstream-QLKFN1  Cargo.toml  README.md  profile.sh  run.sh
src/: main.rs
