[package]
name = "bevy_boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_rapier3d = { version = "0.14.1", features = [ "simd-stable", "debug-render" ] }
bevy-inspector-egui = "0.11"
smooth-bevy-cameras = "0.4.0"
bevy_prototype_debug_lines = { version = "0.7", features = ["3d"] }
itertools = "0.10.3"
#rayon = "1.5.3"
